# KNX-IOT-STACK

./: .gitignore  CMakeLists.txt  README.rst  mbedtls-patch.cmake
.github/workflows/: CLA.yml  build.yml  check-format.yml  client-server-test.yml  cmake-linux.yml  cmake-windows.yml  doxygen-publish.yml  doxygen.yml  gitlabsync.yml  pr-format.yml  pylint.yml  static-analysis.yml  unittest.yml
api/: oc_blockwise.c  oc_buffer.c  oc_client_api.c  oc_core_res.c  oc_device_mode.c  oc_discovery.c  oc_endpoint.c  oc_events.h  oc_helpers.c  oc_knx.c  oc_knx.h  oc_knx_client.c  oc_knx_client.h  oc_knx_dev.c  oc_knx_dev.h  oc_knx_fb.c  oc_knx_fb.h  oc_knx_fp.c  oc_knx_fp.h  oc_knx_gm.c  oc_knx_gm.h  oc_knx_helpers.c  oc_knx_helpers.h  oc_knx_p.c  oc_knx_p.h  oc_knx_sec.c  oc_knx_sec.h  oc_knx_sub.c  oc_knx_sub.h  oc_knx_swu.c  oc_knx_swu.h  oc_main.c  oc_main.h  oc_rep.c  oc_replay.c  oc_replay.h  oc_ri.c  oc_server_api.c  oc_session_events.c  oc_session_events_internal.h
api/c-timestamp/t/: tap.c
api/cloud/: rd_client.h
api/unittest/: CMakeLists.txt  KNXtest.cpp  RITest.cpp  apitest.cpp  coreresourcetest.cpp  eptest.cpp  linkformattest.cpp  ocapitest.cpp  replaytest.cpp  reptest.cpp
apps/: CMakeLists.txt  GettingStarted.md  LSAB_minimal_all.c  LSAB_minimal_pi.c  LSSB_minimal_all.c  LSSB_minimal_pi.c  Readme.md  client_openthread.c  lsab_minimal.py  lsab_minimal_all.c  lssb_minimal_all.c  pushbutton_all.c  server_certification_tests.c  server_openthread.c  simpleclient.py  simpleclient_all.c  simpleclient_displayotron.c  simpleclient_spake_all.c  simpleserver.c  simpleserver_all.c  simpleserver_windows.c  spaketest.c  testclient_all.c  testserver_all.c
images/: application.puml  knxstack-v1.vsdx  porting.pptx  python-architecture.puml  sequence_receive_s-mode.puml  sequence_runtime.puml  sequence_send_s-mode.puml  sequence_setup.puml  setup-pi.puml  setup-windows.puml
include/: oc_api.h  oc_base64.h  oc_blockwise.h  oc_buffer.h  oc_buffer_settings.h  oc_client_state.h  oc_clock_util.h  oc_core_res.h  oc_cred.h  oc_device_mode.h  oc_discovery.h  oc_endpoint.h  oc_helpers.h  oc_knx.h  oc_network_events.h  oc_network_monitor.h  oc_obt.h  oc_pki.h  oc_programming_mode.h  oc_rep.h  oc_ri.h  oc_session_events.h  oc_signal_event_loop.h  oc_uuid.h
messaging/coap/: coap.c  coap.h  constants.h  engine.c  engine.h  observe.c  observe.h  oc_coap.h  oscore.c  oscore.h  oscore_constants.h  separate.c  transactions.c  transactions.h
messaging/coap/unittest/: CMakeLists.txt  coapsignaltest.cpp  messagingtest.cpp
port/: CMakeLists.txt  dns-sd.h  oc_assert.h  oc_clock.h  oc_connectivity.h  oc_log.c  oc_log.h  oc_network_events_mutex.h  oc_random.h  oc_spake.h  oc_storage.h
port/linux/: Makefile  dns-sd.c  ipadapter.c  ipadapter.h  ipcontext.h  kis-client-server.pc.in  kis-client.pc.in  kis-server.pc.in  oc_config.h  oc_spake.c  random.c  readme.md  storage.c  tcpadapter.c
port/openthread/: README  oc_config.h
port/unittest/: CMakeLists.txt  platformtest.cpp
port/windows/: abort.c  dns-sd.c  ipadapter.c  ipadapter.h  ipcontext.h  network_addresses.c  oc_config.h  random.c  storage.c  tcpadapter.c
pythonbinding/: README.md  build_so_windows.sh  kisCS_Export.h  knx_stack.py  oc_python.c  oc_python.h  requirements.txt
pythonbinding/application_scripts/: LSAB_config.json  LSSB_config.json  README.md  install_config.py  install_demo.py  knx_test_sequence.py  list_device_with_ia.py  list_devices.py  programming_mode.py  reset_device.py  s-mode.py  sniffer-s-mode.py  test_server_config.json
pythonbinding/test/: README.md  install_devices.py  knx_test_sequence.py  reset_devices.py
pythonbinding/tests/: README.md  knx_test_sequence.py  secure_knx_test_sequence.py
security/: knx_mbedtls_config.h  mbedtls_config.h  oc_acl.c  oc_ael.c  oc_audit.c  oc_audit.h  oc_certs.c  oc_cred.c  oc_csr.c  oc_doxm.c  oc_keypair.c  oc_obt.c  oc_oscore.h  oc_oscore_context.c  oc_oscore_context.h  oc_oscore_crypto.c  oc_oscore_engine.c  oc_oscore_replay.c  oc_oscore_replay.h  oc_pki.c  oc_pstat.c  oc_roles.c  oc_sdi.c  oc_sp.c  oc_spake2plus.c  oc_spake2plus.h  oc_store.c  oc_svr.c  oc_tls.c  oc_tls.h
security/unittest/: CMakeLists.txt  oscore_hkdf_test.cpp  oscore_test.cpp  securitytest.cpp  spake_test.cpp  tlstest.cpp
signatures/version1/: cla.json
tests/: auto_build.py  client_get_linux.c  client_init_linux.c
tests/itc/ri/: Makefile
tests/itc/ri/helper/: RIHelper.cpp
tests/port/linux/: coverage_report.sh
tools/: .clang-tidy.in  README  check-style  check.py  clang-format.cmake  clang-tidy.cmake  client-server-test.sh  doxygen.ini  whitespace_commit_checker.sh
util/: oc_etimer.h  oc_list.c  oc_list.h  oc_memb.c  oc_memb.h  oc_mmem.c  oc_mmem.h  oc_process.c
